# mcpruntime-python

./: .gitlab-ci.yml  LICENSE  README.md  lint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: chatgpt_minimal.py  mcp_client.py  mcp_server.py
mcpruntime/: executor.py  schema.py
tests/: test_executor.py  test_schema_basic.py  test_schema_literal_optional.py
