[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpruntime"
version = "0.1.0"
description = "Minimal runtime bridge between ChatGPT and MCP tools"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "calvin-wiseiot" }
]

dependencies = [
  "fastmcp>=0.4.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
packages = ["mcpruntime"]
